【admin】管理员管理相关后台功能提交

--- a/src/main/webapp/css/easyui.css
+++ b/src/main/webapp/css/easyui.css
@@ -70,8 +70,8 @@ table a{color: #1f73e4;}
 .table1 img{ width:40px; cursor: pointer; height:40px; margin-right: 5px; border: 1px solid #9fa8b3 }
 .table1 td { padding:5px 5px 5px 15px;}
 .table1 .t1top{text-align:right; background:#d7d7d7;height:50px; }
-.table1 .t1top input{ color: #999; width: 200px; border: 1px solid #9fa8b3; padding-left: 5px; line-height: 31px; border-left:none; margin-right: 20px; height: 31px; }
-.table1 .t1top span{ vertical-align: middle; margin-top: -4px; *margin-top: -13px; display: inline-block; width: 32px; height: 33px; background-color: #798da6; background-position:3px -403px; }
+.table1 .t1top input{ color: #999; width: 200px; border: 1px solid #9fa8b3; padding-left: 5px; line-height: 31px; height: 31px; }
+.table1 .t1top span{ vertical-align: middle; margin-top: -4px; *margin-top: -13px; display: inline-block; width: 32px; height: 33px; background-color: #798da6; background-position:3px -403px; margin-right: 20px;cursor: pointer;}
 
 .table2 .t2top{background:#d7d7d7;height:50px; }
 .table2 .t2top li { float:left; margin-left:15px; }
