--- a/src/main/webapp/js/uploadify/uploadify.css
+++ b/src/main/webapp/js/uploadify/uploadify.css
@@ -27,7 +27,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	-webkit-border-radius: 30px;
 	-moz-border-radius: 30px;
 	border-radius: 30px;
-	border: 2px solid #808080;
+	border: none;
 	color: #FFF;
 	font: bold 12px Arial, Helvetica, sans-serif;
 	text-align: center;
