手机: 1.企业列表去重  已处理 2.类别检查      未重现 3.公告全都是置顶  已处理 web: 1.没执法文书，不显示表头。宽度和上面一致  已处理 2.检查项管理  添加按钮对齐  变大。做成执法人员编辑中的保存和添加风格一致  已处理

--- a/src/main/webapp/css/easyui.css
+++ b/src/main/webapp/css/easyui.css
@@ -18,8 +18,8 @@ background:url(../images/icons.png) no-repeat;
 .loginbox{ background: url(../images/loginbg.png) no-repeat 0 0; width: 1005px; height:513px;  }
 .loginbox form{ width: 460px; margin:230px auto 0; }
 .loginbox form p.lxq{ padding-top: 110px; float:left; width: 230px; font-size: 12px; color: #5d5d5d;}
-.loginbox form div{ float:left;width:225px;}
-.loginbox form div p{ padding: 8px 0;}
+.loginbox form div{ float:left;width:225px;height:200px;}
+.loginbox form div p{ padding: 5px 0;}
 .loginbox form p label{ color: #0952a1; width: 65px; display: inline-block;}
 .loginbox form p input{ padding: 2px; border:1px solid #7491b5; background: #f5fafe;}
 
@@ -174,7 +174,7 @@ table a{color: #1f73e4;}
 .fbnew textarea{ width: 440px;  padding: 2px; height: 220px; }
 .fbnew .fbnt a{ background: #00a0e9; display: inline-block; border: none; color: #FFF;padding: 3px 15px; border-radius: 4px;}
 .jcglbjst{padding-left: 10px;}
-#dyhh, .jcglbja{color: #333;height: 25px;line-height: 25px;padding: 1px 10px;margin: 7px 0;border-radius: 4px;display: inline-block;border: 1px solid #a0a0a0;background: #FFF;}
+#dyhh, .jcglbja{color: #333;height: 25px;line-height: 25px;padding: 1px 10px;margin: 7px 5px;border-radius: 4px;display: inline-block;border: 1px solid #a0a0a0;background: #FFF;}
 .panel {
   overflow: hidden;
   text-align: left;
